# synacor

./: ChangeLog.md  synacor.cabal
src/: Main.lhs
src/Synacor/: Disassembler.hs  Instruction.hs  Machine.hs  SequentialReader.hs
